out2
In file included from CommonFunctions.h:32:0,
                 from UnitTest.cc:4:
CommonFunctions.cc: In function ‘void CommonFunctions::populateUntil(integer)’:
CommonFunctions.cc:5:35: error: ‘nth_prime’ was not declared in this scope
   integer ithprime = nth_prime(i++);
                                   ^
CommonFunctions.cc:5:35: note: suggested alternative:
In file included from UnitTest.cc:1:0:
/usr/local/include/primecount.hpp:93:9: note:   ‘primecount::nth_prime’
 int64_t nth_prime(int64_t n);
         ^
In file included from CommonFunctions.h:32:0,
                 from UnitTest.cc:4:
CommonFunctions.cc:7:16: error: ‘ithprime’ was not declared in this scope
       } while (ithprime < x);
                ^
CommonFunctions.cc: In function ‘void CommonFunctions::theta(rational&, integer)’:
CommonFunctions.cc:37:12: error: expected primary-expression before ‘const’
    while ((const integer prime = CommonFunctions::populations[i]) <= x) {
            ^
CommonFunctions.cc:37:12: error: expected ‘)’ before ‘const’
CommonFunctions.cc:40:1: error: expected ‘)’ before ‘}’ token
 }
 ^
CommonFunctions.cc:40:1: error: expected primary-expression before ‘}’ token
CommonFunctions.cc: In function ‘void CommonFunctions::psi(rational&, integer)’:
CommonFunctions.cc:45:12: error: expected primary-expression before ‘const’
    while ((const integer prime = CommonFunctions::populations[i]) <= x) {
            ^
CommonFunctions.cc:45:12: error: expected ‘)’ before ‘const’
CommonFunctions.cc:48:1: error: expected ‘)’ before ‘}’ token
 }
 ^
CommonFunctions.cc:48:1: error: expected primary-expression before ‘}’ token
